tests/sksl/errors/ReservedNameAttribute.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'attribute'
1 error
